# MT19937_thread_safe

./: CMakeLists.txt  README.md
include/: mt19937.hpp  mt19937_consts.hpp  thread_rng_manager.hpp
src/: mt19937.cpp  mt19937_twist.cpp  thread_rng_manager.cpp
tests/: test_reference.cpp
